# azure_metrics_handler

./: .gitignore  .variables  README.md  helper.sh  newrelic.ini  requirements.txt  setup.cfg
src/azmeha/: impls.py  metrics.py  processor.py
test/: test_processes.py
